--- a/05_CSS_Selectors/index.html
+++ b/05_CSS_Selectors/index.html
@@ -118,7 +118,7 @@
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="www.google.com">Google</a>
+                    <a href="https://www.google.com">Google</a>
                 </li>
             </ul>
         </nav>
